# SiberSystemsTestTask

./: CMake_version_Implementation_notes.docx  Implementation notes.docx  README.md  SiberSystemsTestTask.pro
AutoTests/: AutoTests.pro  tst_threelistclasstest.cpp
SiberSystemsTestTask/: SiberSystemsTestTask.pro  main.cpp  threelistclass.cpp  threelistclass.h
SiberSystemsTestTaskCMake/: CMakeLists.txt  images.qrc  mainwindow.cpp  mainwindow.h  validationlineedit.cpp  validationlineedit.h
